// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component renders correctly when loading 1`] = `
.c3 {
  height: 4rem;
  width: auto;
  padding: 0 1rem;
  text-align: center;
  font-size: 1.4rem;
  cursor: pointer;
}

.c9 {
  height: 4rem;
  width: 4rem;
  padding: 0 1rem;
  text-align: center;
  font-size: 1.4rem;
  cursor: pointer;
}

.c6 svg {
  height: 16px;
  fill: currentColor;
}

.c5 {
  height: 4rem;
  width: auto;
  padding: 0 1rem;
  text-align: center;
  font-size: 1.4rem;
  cursor: pointer;
  padding-top: 12px;
  line-height: 1;
}

.c8 {
  height: 4rem;
  width: auto;
  padding: 0 1rem;
  text-align: center;
  font-size: 1.4rem;
  cursor: pointer;
  font-size: 1.3rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 4rem;
  line-height: 4rem;
  color: white;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 {
  text-decoration: none;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <a
      className="c2"
      href="/sessions"
      onClick={[Function]}
    >
      <div
        className="c3"
      >
        Games
      </div>
    </a>
  </div>
  <div
    className="c4"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <div
        className="c5"
      >
        <div
          className="c6"
          dangerouslySetInnerHTML={
            Object {
              "__html": Object {},
            }
          }
          height="16px"
        />
      </div>
    </a>
  </div>
  <div
    className="c7"
  >
    <div
      className="c8"
    >
      
    </div>
    <a
      href="/settings"
      onClick={[Function]}
    >
      <div
        className="c9"
      >
        <i
          className="fa fa-cog"
        />
      </div>
    </a>
  </div>
</div>
`;

exports[`Header component renders correctly when logged in 1`] = `
.c3 {
  height: 4rem;
  width: auto;
  padding: 0 1rem;
  text-align: center;
  font-size: 1.4rem;
  cursor: pointer;
}

.c9 {
  height: 4rem;
  width: 4rem;
  padding: 0 1rem;
  text-align: center;
  font-size: 1.4rem;
  cursor: pointer;
}

.c6 svg {
  height: 16px;
  fill: currentColor;
}

.c5 {
  height: 4rem;
  width: auto;
  padding: 0 1rem;
  text-align: center;
  font-size: 1.4rem;
  cursor: pointer;
  padding-top: 12px;
  line-height: 1;
}

.c8 {
  height: 4rem;
  width: auto;
  padding: 0 1rem;
  text-align: center;
  font-size: 1.4rem;
  cursor: pointer;
  font-size: 1.3rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 4rem;
  line-height: 4rem;
  color: white;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 {
  text-decoration: none;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <a
      className="c2"
      href="/sessions"
      onClick={[Function]}
    >
      <div
        className="c3"
      >
        Games
      </div>
    </a>
  </div>
  <div
    className="c4"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <div
        className="c5"
      >
        <div
          className="c6"
          dangerouslySetInnerHTML={
            Object {
              "__html": Object {},
            }
          }
          height="16px"
        />
      </div>
    </a>
  </div>
  <div
    className="c7"
  >
    <div
      className="c8"
    >
      test
    </div>
    <a
      href="/settings"
      onClick={[Function]}
    >
      <div
        className="c9"
      >
        <i
          className="fa fa-cog"
        />
      </div>
    </a>
  </div>
</div>
`;
